--- a/Pipfile
+++ b/Pipfile
@@ -1,5 +1,6 @@
 [[source]]
 name = "pypi"
+# url = "https://pypi.org/simple"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
 verify_ssl = true
 
@@ -21,6 +22,12 @@ faker = "*"
 flask-avatars = "*"
 psutil = "*"
 gunicorn = "*"
+flask-ckeditor = "*"
+# uwsgi = "*"
+# python-devel = "*"
+# python-dev = "*"
+tornado = "*"
+flask-socketio = "*"
 
 [requires]
 python_version = "3.6"
