--- a/Pipfile
+++ b/Pipfile
@@ -13,20 +13,20 @@ pandas = "*"
 requests = "*"
 arrow = "*"
 flask-sqlalchemy = "*"
-flask-bootstrap = "*"
-flask-moment = "*"
 flask-wtf = "*"
 flask-mail = "*"
 flask-login = "*"
 flask-socketio = "*"
-flask-ckeditor = "*"
 flask-avatars = "*"
 psutil = "*"
 gunicorn = "*"
 # uwsgi = "*"
 tornado = "*"
-xlrd = "*"
 mysql-connector = "*"
+openpyxl = "*"
+flask-restful = "*"
+flask-httpauth = "*"
+flask-cors = "*"
 
 [requires]
 python_version = "3.6"
